# memphis-rust-community

./: .gitignore  Cargo.toml  README.md  docker-compose-latest.yml  docker-compose-stable.yml  docker-compose.yml
.github/workflows/: CD.yml  CI.yml
examples/basic/: Cargo.toml
examples/basic/src/: consumer.rs  main.rs  producer.rs  settings.rs
examples/consumer/: Cargo.toml
memphis/: Cargo.toml
memphis/src/: lib.rs  memphis_client.rs  request_error.rs  station_settings.rs
memphis/src/constants/: memphis_constants.rs
memphis/src/consumer/: consumer_error.rs  event.rs  incoming_message.rs  memphis_consumer.rs  memphis_consumer_options.rs  mod.rs
memphis/src/core/: memphis_message_handler.rs
memphis/src/helper/: memphis_util.rs  mod.rs  partition_iterator.rs
memphis/src/models/: mod.rs  schemaverse_schema_update.rs
memphis/src/models/request/: consumer.rs  mod.rs  notification.rs  pm_ack_msg.rs  producer.rs  station.rs
memphis/src/models/response/: consumer.rs  mod.rs  producer.rs
memphis/src/producer/: composable_message.rs  dls_message.rs  memphis_producer.rs  memphis_producer_options.rs  mod.rs  producer_error.rs
memphis/src/schemaverse/: mod.rs  schema_type.rs
memphis/src/schemaverse/schema/: json.rs  mod.rs
memphis/src/station/: memphis_station.rs  memphis_station_options.rs  mod.rs
memphis/tests/: common.rs  consumer_tests.rs  message_tests.rs  producer_tests.rs  station_tests.rs
memphis/tests/helper/: mod.rs  test_helper.rs
src/: lib.rs  main.rs  memphis_client.rs  options.rs  request_error.rs  station_settings.rs
src/constants/: memphis_constants.rs  mod.rs
src/consumer/: consumer_error.rs  create_consumer_error.rs  fetch_message_options.rs  memphis_consumer.rs  memphis_consumer_options.rs  mod.rs
src/core/: memphis_message.rs  memphis_message_handler.rs  memphis_message_handler_event_args.rs  mod.rs
src/helper/: memphis_util.rs
src/models/: mod.rs
src/models/request/: create_consumer_request.rs  destroy_consumer_request.rs  mod.rs  pm_ack_msg.rs
src/producer/: composable_message.rs  memphis_producer.rs  memphis_producer_options.rs  mod.rs  producer_error.rs
src/schemaverse/: mod.rs  schema_store.rs  schema_type.rs
src/schemaverse/schema/: json.rs  mod.rs
src/station/: memphis_station_options.rs
